opam-version: "2.0"
name: "odepack"
version: "0.6.8"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
license: "LGPL-3.0 with OCaml linking exception"
homepage: "https://github.com/Chris00/ocaml-odepack"
dev-repo: "git+https://github.com/Chris00/ocaml-odepack.git"
bug-reports: "https://github.com/Chris00/ocaml-odepack/issues"
tags: [ "ODE" "scientific-computing"  ]
build: [
  ["oasis" "setup"]
  ["ocaml" "setup.ml" "-configure" "--prefix" prefix
   "--enable-tests" {with-test} ]
  ["ocaml" "setup.ml" "-build"]
  ["ocaml" "setup.ml" "-test"] {with-test}
  ["ocaml" "setup.ml" "-doc"] {with-doc}
]
install: ["ocaml" "setup.ml" "-install"]
remove: [
  ["ocamlfind" "remove" "odepack"]
]
depends: [
  "ocaml" {>= "3.12.1"}
  "base-bigarray"
  "oasis" {build & >= "0.4.7"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
]
flags: light-uninstall
depexts: [
  ["gfortran"] {os-distribution = "debian"}
  ["gfortran"] {os-distribution = "ubuntu"}
  ["gfortran"] {os-distribution = "alpine"}
  ["gcc-gfortran"] {os-distribution = "fedora"}
  ["gcc-fortran"] {os-distribution = "opensuse"}
  ["lang/f77"] {os = "freebsd"}
  ["lang/f77"] {os = "openbsd"}
  ["gcc"] {os = "macos" & os-distribution = "homebrew"}
  ["gcc"] {os = "macos" & os-distribution = "macports"}
]
synopsis: "Binding to ODEPACK"
description: """
This is a collection of solvers for the initial value problem for
ordinary differential equation systems."""
